--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@faker-js/faker": "^8.3.1",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-graphql-request": "^6.0.1",
+    "@graphql-codegen/typescript-msw": "^1.1.6",
     "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@mswjs/data": "^0.16.1",
     "craco-alias": "^3.0.1",
+    "graphql-codegen-typescript-mock-data": "^3.7.0",
+    "msw": "^1.3.2",
     "prettier": "^3.1.0"
   },
   "scripts": {
@@ -60,5 +65,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
