--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reflect-metadata": "^0.1.14",
     "tabler-icons-react": "^1.56.0",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "craco-alias": "^3.0.1",
     "graphql-codegen-typescript-mock-data": "^3.7.0",
     "msw": "^1.3.2",
+    "plop": "^4.0.0",
     "prettier": "^3.1.0"
   },
   "scripts": {
